--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --open --mode development",
+    "build": "webpack --mode production",
+    "dev-server": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -18,15 +21,21 @@
   "homepage": "https://github.com/Tsardines/maine-breweries#readme",
   "dependencies": {
     "axios": "^0.21.0",
+    "bulma": "^0.9.1",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
     "sass": "^1.29.0",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.7",
+    "@babel/preset-env": "^7.12.7",
+    "babel-loader": "^8.2.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
+    "mixitup": "^3.3.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0"
